# jarvis

./: .env.example  .gitignore  AGENTS.md  APPLE_NATIVE_ROADMAP.md  ARCHITECTURE_DECISIONS.md  FEATURE_MATRIX.md  IMPLEMENTATION_SUMMARY.md  JARVIS-UNIFIED-REVIEW-ACTION-PLAN.md  JARVIS_V2_IMPLEMENTATION_ANALYSIS.md  Jarvis-v2.0-PRD.docx  Jarvis-v2.0-PRD.md  README_REMOTE.md  ROADMAP.md  _CLAUDE.md  apple-github-research-report.md  com.jarvis.daemon.plist  improvements.md  macOS-frameworks-research.md  pyproject.toml  slack-app-manifest.json  slack-app-manifest.yml  start-jarvis.sh  stop-jarvis.sh
.codex/: README.md
.jarvis/: README.md
.jarvis/config/: improvement-schedule.json
.jarvis/sessions/: session-20250212-container-attempt.md  session-20250212-research-findings.md  session-20250212-workflow-test.md
.jarvis/templates/: containers.json
.jarvis/workflow/: README.md  available-mcp-tools.md  container-limitations.md  mcp-tools-audit.md  phase-implementation.md  phase-learning.md  phase-planning.md  phase-review.md  phase-setup.md  phase-testing.md
JarvisApp/: Package.swift  agent_config.json  setup_elevenlabs.sh
JarvisApp/.build/: build.db  (+1 more)
JarvisClient/: Package.swift
JarvisiOS/: README.md
scripts/: tailscale-setup.sh
tests/: conftest.py  test_foundation_models.py  test_fs_watcher.py  test_idle_mode.py  test_macos_native.py  test_memory.py  test_mlx_inference.py  test_model_router.py  test_self_learning.py  test_skill_generator.py  test_universal_heuristics.py
tool_configs/: approve.json  deny.json  get_status.json  run_task.json
(+382 files in other folders)
